Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I0899408e317dfa50cf5b450f8eb8b2a889976082

--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -1416,7 +1416,7 @@
     <string name="lockpassword_confirm_your_pattern_header" msgid="4037701363240138651">"تأیید الگو"</string>
     <string name="lockpassword_confirm_your_work_pattern_header" msgid="2668883108969165844">"الگوی نمایه کاری را وارد کنید"</string>
     <string name="lockpassword_confirm_your_pin_header" msgid="2241722970567131308">"پین را دوباره وارد کنید"</string>
-    <string name="lockpassword_reenter_your_profile_pin_header" msgid="2890233614560435538">"دوباره وارد کردن پین کاری"</string>
+    <string name="lockpassword_reenter_your_profile_pin_header" msgid="2890233614560435538">"پین کاری را دوباره وارد کنید"</string>
     <string name="lockpassword_confirm_your_work_pin_header" msgid="4229765521391960255">"پین نمایه کاری را وارد کنید"</string>
     <string name="lockpassword_confirm_passwords_dont_match" msgid="2100071354970605232">"گذرواژه‌ها مطابقت ندارند"</string>
     <string name="lockpassword_confirm_pins_dont_match" msgid="1103699575489401030">"پین ها با یکدیگر مطابقت ندارند"</string>
