--- a/res/values-fr-rCA/strings.xml
+++ b/res/values-fr-rCA/strings.xml
@@ -264,7 +264,7 @@
     <string name="security_status_title" msgid="6958004275337618656">"État de la sécurité"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"Verrouillage d\'écran, Localiser mon appareil, sécurité des applications"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"Sécurité et confidentialité"</string>
-    <string name="safety_center_summary" msgid="3554867379951053869">"Sécurité applications, verrouillage appareil, autorisations"</string>
+    <string name="safety_center_summary" msgid="3554867379951053869">"Sécurité applis, verrouillage appareil, autorisations"</string>
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Visage ajouté"</string>
     <string name="security_settings_face_preference_summary_none" msgid="523320857738436024">"Configuration requise"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Déverr. par reconn. faciale"</string>
@@ -3815,7 +3815,7 @@
     <string name="battery_saver_on_summary" msgid="4605146593966255848">"Activée"</string>
     <string name="battery_saver_off_scheduled_summary" msgid="2193875981740829819">"S\'active lorsque la pile atteint <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
     <string name="battery_saver_off_summary" msgid="4411561435493109261">"Désactivé"</string>
-    <string name="app_battery_usage_title" msgid="346558380609793334">"Utilisation de la pile par les applications"</string>
+    <string name="app_battery_usage_title" msgid="346558380609793334">"Utilisation de la pile par les applis"</string>
     <string name="app_battery_usage_summary" msgid="6349965904306339539">"Régler l\'utilisation de la pile pour les applis"</string>
     <string name="filter_battery_unrestricted_title" msgid="821027369424198223">"Aucune restriction"</string>
     <string name="filter_battery_optimized_title" msgid="8236647176487754796">"Optimisée"</string>
