--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -3328,7 +3328,7 @@
     <string name="app_notification_fsi_permission_summary" msgid="7673487977631068039">"ಸಾಧನ ಲಾಕ್ ಆಗಿರುವಾಗ ಪೂರ್ಣ ಸ್ಕ್ರೀನ್‌ ಅನ್ನು ಆವರಿಸಿಕೊಳ್ಳಲು ನೋಟಿಫಿಕೇಶನ್‌ಗಳನ್ನು ಅನುಮತಿಸಿ"</string>
     <string name="notification_badge_title" msgid="6854537463548411313">"ನೋಟಿಫಿಕೇಶನ್‍ ಡಾಟ್ ಅನ್ನು ಅನುಮತಿಸಿ"</string>
     <string name="notification_channel_badge_title" msgid="6505542437385640049">"ನೋಟಿಫಿಕೇಶನ್‍ ಡಾಟ್‌ ತೋರಿಸಿ"</string>
-    <string name="app_notification_override_dnd_title" msgid="3769539356442226691">"\'ಅಡಚಣೆ ಮಾಡಬೇಡಿ\' ಅನ್ನು ಮರೆಮಾಡಿ"</string>
+    <string name="app_notification_override_dnd_title" msgid="3769539356442226691">"\'ಅಡಚಣೆ ಮಾಡಬೇಡಿ\' ಅನ್ನು ಪರಿಗಣಿಸಬೇಡಿ"</string>
     <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"ಅಡಚಣೆ ಮಾಡಬೇಡ ಆನ್ ಇರುವಾಗಲೂ ಈ ಅಧಿಸೂಚನೆಗಳು ಮುಂದುವರಿಯಲು ಅವಕಾಶ ಮಾಡಿಕೊಡಿ"</string>
     <string name="app_notification_visibility_override_title" msgid="7778628150022065920">"ಲಾಕ್ ಸ್ಕ್ರೀನ್"</string>
     <string name="app_notifications_dialog_done" msgid="573716608705273004">"ಮುಗಿದಿದೆ"</string>
