--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -2020,7 +2020,7 @@
     <string name="accessibility_hearing_device_about_title" msgid="7883758309646288250">"보청기 정보"</string>
     <string name="accessibility_hearing_device_footer_summary" msgid="7451899224828040581">"청각 보조 기기의 전원이 켜져 있으며 페어링할 준비가 되어 있는지 확인하세요."</string>
     <string name="accessibility_hearing_device_pairing_page_title" msgid="6608901091770850295">"보청기 페어링"</string>
-    <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"사응 가능한 청각 보조 기기"</string>
+    <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"사용 가능한 청각 보조 기기"</string>
     <string name="accessibility_found_all_devices" msgid="7817834722148556520">"청각 보조 기기가 표시되지 않나요?"</string>
     <string name="accessibility_list_all_devices_title" msgid="161495343959211216">"기기 더보기"</string>
     <string name="accessibility_audio_adjustment_title" msgid="1332113739136802997">"오디오 조정"</string>
