--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -1400,9 +1400,9 @@
     <string name="settings_license_activity_loading" msgid="1653151990366578827">"लोड करत आहे..."</string>
     <string name="settings_safetylegal_activity_loading" msgid="1757860124583063395">"लोड करत आहे..."</string>
     <string name="lockpassword_choose_your_password_header" msgid="2407205113298094824">"पासवर्ड सेट करा"</string>
-    <string name="lockpassword_choose_your_profile_password_header" msgid="7038997227611893312">"कार्य प्रोफाईलसाठी पासवर्ड सेट करा"</string>
+    <string name="lockpassword_choose_your_profile_password_header" msgid="7038997227611893312">"कार्य प्रोफाइलसाठी पासवर्ड सेट करा"</string>
     <string name="lockpassword_choose_your_pin_header" msgid="7754265746504679473">"पिन सेट करा"</string>
-    <string name="lockpassword_choose_your_profile_pin_header" msgid="4581749963670819048">"कार्य प्रोफाईलसाठी पिन सेट करा"</string>
+    <string name="lockpassword_choose_your_profile_pin_header" msgid="4581749963670819048">"कार्य प्रोफाइलसाठी पिन सेट करा"</string>
     <string name="lockpassword_choose_your_pattern_header" msgid="5674909390779586252">"पॅटर्न सेट करा"</string>
     <string name="lockpassword_choose_your_pattern_description" msgid="6808109256008481046">"अतिरिक्त सुरक्षेसाठी, डिव्हाइस अनलॉक करण्याकरिता पॅटर्न सेट करा"</string>
     <string name="lockpassword_choose_your_profile_pattern_header" msgid="3101811498330756641">"कार्य प्रोफाईलसाठी पॅटर्न सेट करा"</string>
