--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -616,7 +616,7 @@
     <string name="lockpassword_password_requires_nonletter" msgid="1185342065898300006">"{count,plural, =1{Має містити принаймні один символ, який не є літерою}one{Має містити принаймні # символ, який не є літерою}few{Має містити принаймні # символи, які не є літерами}many{Має містити принаймні # символів, які не є літерами}other{Має містити принаймні # символу, які не є літерами}}"</string>
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{Має містити принаймні один символ, який не є цифрою}one{Має містити принаймні # символ, який не є цифрою}few{Має містити принаймні # символи, які не є цифрами}many{Має містити принаймні # символів, які не є цифрами}other{Має містити принаймні # символу, які не є цифрами}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"Адміністратор пристрою не дозволяє використовувати останній пароль"</string>
-    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"Цифри в порядку зростання чи спадання та повторювані цифри заборонені"</string>
+    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"Цифри в порядку зростання чи спадання й повторювані цифри заборонені"</string>
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"Підтвердити"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"Очистити"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"Параметри блокування екрана змінено. Спробуйте ввести нові дані."</string>
