--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -3328,7 +3328,7 @@
     <string name="app_notification_fsi_permission_summary" msgid="7673487977631068039">"允許在裝置上鎖時顯示全螢幕通知"</string>
     <string name="notification_badge_title" msgid="6854537463548411313">"允許通知圓點"</string>
     <string name="notification_channel_badge_title" msgid="6505542437385640049">"顯示通知圓點"</string>
-    <string name="app_notification_override_dnd_title" msgid="3769539356442226691">"忽略「請勿騷擾」"</string>
+    <string name="app_notification_override_dnd_title" msgid="3769539356442226691">"覆寫「請勿騷擾」"</string>
     <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"「請勿騷擾」模式開啟時繼續接收這些通知"</string>
     <string name="app_notification_visibility_override_title" msgid="7778628150022065920">"上鎖畫面"</string>
     <string name="app_notifications_dialog_done" msgid="573716608705273004">"完成"</string>
