--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -2021,7 +2021,7 @@
     <string name="accessibility_hearing_device_footer_summary" msgid="7451899224828040581">"আপনার হিয়ারিং ডিভাইস চালু করা আছে কিনা এবং পেয়ার করার জন্য রেডি কিনা তা ভালভাবে দেখে নিন"</string>
     <string name="accessibility_hearing_device_pairing_page_title" msgid="6608901091770850295">"হিয়ারিং ডিভাইস পেয়ার করা"</string>
     <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"উপলভ্য হিয়ারিং ডিভাইস"</string>
-    <string name="accessibility_found_all_devices" msgid="7817834722148556520">"হিয়ারিং ডিভাইস দেখতে পাচ্ছেন না?"</string>
+    <string name="accessibility_found_all_devices" msgid="7817834722148556520">"আপনার হিয়ারিং ডিভাইস দেখতে পাচ্ছেন না?"</string>
     <string name="accessibility_list_all_devices_title" msgid="161495343959211216">"আরও ডিভাইস দেখুন"</string>
     <string name="accessibility_audio_adjustment_title" msgid="1332113739136802997">"অডিও অ্যাডজাস্টমেন্ট"</string>
     <string name="accessibility_toggle_audio_description_preference_title" msgid="8916473886256061220">"অডিও বিবরণ"</string>
