--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -1123,7 +1123,7 @@
     <string name="build_number" msgid="9009733242117579826">"Järgunumber"</string>
     <string name="module_version" msgid="1787518340082046658">"Google Play süsteemivärskendus"</string>
     <string name="device_info_not_available" msgid="4804474466616712326">"Pole saadaval"</string>
-    <string name="storage_settings" msgid="7472188817781592677">"Mäluruum"</string>
+    <string name="storage_settings" msgid="7472188817781592677">"Salvestusruum"</string>
     <string name="storage_settings_for_app" msgid="229425418984637483">"Salvestusruum ja vahemälu"</string>
     <string name="storage_settings_title" msgid="486118156723194815">"Mäluruumi seaded"</string>
     <string name="status_eid" msgid="7532406028683438634">"EID"</string>
@@ -3329,7 +3329,7 @@
     <string name="notification_badge_title" msgid="6854537463548411313">"Luba märguandetäpp"</string>
     <string name="notification_channel_badge_title" msgid="6505542437385640049">"Kuva märguandetäpp"</string>
     <string name="app_notification_override_dnd_title" msgid="3769539356442226691">"Funktsiooni Mitte segada alistamine"</string>
-    <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"Nendel märguannetel lubatakse teid jätkuvalt katkestada, kui funktsioon Mitte segada on sisse lülitatud"</string>
+    <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"Need märguanded esitatakse ka siis, kui funktsioon Mitte segada on sisse lülitatud"</string>
     <string name="app_notification_visibility_override_title" msgid="7778628150022065920">"Lukustuskuva"</string>
     <string name="app_notifications_dialog_done" msgid="573716608705273004">"Valmis"</string>
     <string name="notification_show_lights_title" msgid="5564315979007438583">"Vilkuv tuli"</string>
