--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -2020,7 +2020,7 @@
     <string name="accessibility_hearing_device_about_title" msgid="7883758309646288250">"À propos des appareils auditifs"</string>
     <string name="accessibility_hearing_device_footer_summary" msgid="7451899224828040581">"Vérifiez que votre appareil auditif est allumé et prêt à être associé"</string>
     <string name="accessibility_hearing_device_pairing_page_title" msgid="6608901091770850295">"Associer appareil auditif"</string>
-    <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"Appareils auditifs dispos"</string>
+    <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"Appareils auditifs disponibles"</string>
     <string name="accessibility_found_all_devices" msgid="7817834722148556520">"Vous ne voyez pas votre appareil auditif ?"</string>
     <string name="accessibility_list_all_devices_title" msgid="161495343959211216">"Voir d\'autres appareils"</string>
     <string name="accessibility_audio_adjustment_title" msgid="1332113739136802997">"Réglage du son"</string>
@@ -2283,7 +2283,7 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Définir une programmation"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Prolonger l\'autonomie de la batterie"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Désactiver quand la batterie est chargée"</string>
-    <string name="battery_saver_sticky_title_percentage" msgid="1178162022087559148">"Éteindre à <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
+    <string name="battery_saver_sticky_title_percentage" msgid="1178162022087559148">"Désactiver à <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
     <string name="battery_saver_sticky_description_new" msgid="6472610662679038342">"L\'économiseur de batterie se désactive lorsque la batterie atteint <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
@@ -2322,7 +2322,7 @@
     <string name="screen_time_category_last_full_charge" msgid="8856908320256057753">"Temps d\'utilisation depuis la dernière charge complète"</string>
     <string name="screen_time_category_for_slot" msgid="8287722270554654959">"Temps d\'utilisation (<xliff:g id="SLOT">%s</xliff:g>)"</string>
     <string name="battery_usage_spinner_view_by_apps" msgid="8769276544072098082">"Afficher par : applis"</string>
-    <string name="battery_usage_spinner_view_by_systems" msgid="7904104223212160541">"Afficher par : systèmes"</string>
+    <string name="battery_usage_spinner_view_by_systems" msgid="7904104223212160541">"Afficher par systèmes"</string>
     <string name="battery_usage_less_than_percent" msgid="5873099028895001082">"&lt; <xliff:g id="PERCENTAGE">%1$s</xliff:g>"</string>
     <string name="process_stats_summary_title" msgid="502683176231281732">"Statistiques relatives aux processus"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"Statistiques détaillées relatives aux processus en cours d\'exécution"</string>
@@ -3329,7 +3329,7 @@
     <string name="notification_badge_title" msgid="6854537463548411313">"Autoriser la pastille de notification"</string>
     <string name="notification_channel_badge_title" msgid="6505542437385640049">"Afficher la pastille de notification"</string>
     <string name="app_notification_override_dnd_title" msgid="3769539356442226691">"Ignorer Ne pas déranger"</string>
-    <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"Laisser ces notifications s\'exécuter quand Ne pas déranger est activé"</string>
+    <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"Autoriser l\'affichage de ces notifications quand Ne pas déranger est activé"</string>
     <string name="app_notification_visibility_override_title" msgid="7778628150022065920">"Écran de verrouillage"</string>
     <string name="app_notifications_dialog_done" msgid="573716608705273004">"OK"</string>
     <string name="notification_show_lights_title" msgid="5564315979007438583">"Clignotement"</string>
@@ -3529,7 +3529,7 @@
     <string name="runtime_permissions_summary_no_permissions_requested" msgid="7174876170116073356">"Aucune autorisation demandée"</string>
     <string name="runtime_permissions_summary_control_app_access" msgid="3744591396348990500">"Contrôler l\'accès des applications à vos données"</string>
     <string name="permissions_usage_title" msgid="2942741460679049132">"Tableau de bord Confidentialité"</string>
-    <string name="permissions_usage_summary" msgid="6784310472062516454">"Afficher les applis qui ont récemment utilisé des autorisations"</string>
+    <string name="permissions_usage_summary" msgid="6784310472062516454">"Affichez les applis qui ont récemment utilisé des autorisations"</string>
     <string name="unused_apps" msgid="4566272194756830656">"Applis inutilisées"</string>
     <string name="unused_apps_summary" msgid="4236371818881973021">"{count,plural, =1{# appli inutilisée}one{# appli inutilisée}other{# applis inutilisées}}"</string>
     <string name="unused_apps_category" msgid="8954930958175500851">"Paramètres de l\'appli si inutilisée"</string>
