--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -2243,7 +2243,7 @@
     <string name="battery_missing_link_message" msgid="6021565067124898074"></string>
     <string name="battery_missing_link_a11y_message" msgid="3310971406602316323">"יש להקיש לקבלת מידע נוסף על השגיאה הזו"</string>
     <string name="power_screen" msgid="4596900105850963806">"מסך"</string>
-    <string name="power_cpu" msgid="1820472721627148746">"CPU"</string>
+    <string name="power_cpu" msgid="1820472721627148746">"‏(CPU) מעבד"</string>
     <string name="power_flashlight" msgid="8993388636332573202">"פנס"</string>
     <string name="power_camera" msgid="4778315081581293923">"מצלמה"</string>
     <string name="power_gps" msgid="6352380895542498164">"GPS"</string>
@@ -3329,7 +3329,7 @@
     <string name="notification_badge_title" msgid="6854537463548411313">"הצגה של סימן ההתראות"</string>
     <string name="notification_channel_badge_title" msgid="6505542437385640049">"הצגה של סימן ההתראות"</string>
     <string name="app_notification_override_dnd_title" msgid="3769539356442226691">"התעלמות ממצב \'נא לא להפריע\'"</string>
-    <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"ההתראות האלה יוכלו להמשיך ולהפריע כשמצב \'נא לא להפריע\' מופעל"</string>
+    <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"ההתראות האלה יוכלו להמשיך ולהפריע גם כשמצב \'נא לא להפריע\' מופעל"</string>
     <string name="app_notification_visibility_override_title" msgid="7778628150022065920">"מסך נעילה"</string>
     <string name="app_notifications_dialog_done" msgid="573716608705273004">"אישור"</string>
     <string name="notification_show_lights_title" msgid="5564315979007438583">"אור מהבהב"</string>
