--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -2022,7 +2022,7 @@
     <string name="accessibility_hearing_device_pairing_page_title" msgid="6608901091770850295">"補聴器とのペア設定"</string>
     <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"使用可能な補聴器"</string>
     <string name="accessibility_found_all_devices" msgid="7817834722148556520">"補聴器が表示されない場合"</string>
-    <string name="accessibility_list_all_devices_title" msgid="161495343959211216">"他の機器を見る"</string>
+    <string name="accessibility_list_all_devices_title" msgid="161495343959211216">"他のデバイスを見る"</string>
     <string name="accessibility_audio_adjustment_title" msgid="1332113739136802997">"音声の調整"</string>
     <string name="accessibility_toggle_audio_description_preference_title" msgid="8916473886256061220">"音声による説明"</string>
     <string name="accessibility_audio_description_summary" msgid="2554789094873781056">"対応する映画や番組にて、画面の表示内容の説明を読み上げます"</string>
