--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -64,7 +64,7 @@
     <string name="bluetooth_pair_other_ear_dialog_right_ear_positive_button" msgid="533612082529204078">"Спари го десното уво"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Спари го левото уво"</string>
     <string name="bluetooth_device_controls_general" msgid="1399214835599665488">"За сите достапни слушни апарати"</string>
-    <string name="bluetooth_device_controls_title" msgid="1895676556354697234">"Поставки за слушни помагала"</string>
+    <string name="bluetooth_device_controls_title" msgid="1895676556354697234">"Поставки за слушни апарати"</string>
     <string name="bluetooth_device_controls_summary" msgid="8115767735418425663">"Кратенка, компатибилност со слушни помагала"</string>
     <string name="bluetooth_device_controls_specific" msgid="7706863288754077107">"За овој уред"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Аудиоизлез"</string>
@@ -973,7 +973,7 @@
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Вклучено - според лице"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Откривање лица"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Дознајте повеќе за „Автоматско ротирање“"</string>
-    <string name="screen_resolution_title" msgid="2690518693139811486">"Резолуција на екран"</string>
+    <string name="screen_resolution_title" msgid="2690518693139811486">"Резолуција на екранот"</string>
     <string name="screen_resolution_option_high" msgid="2617496842852992853">"Висока резолуција"</string>
     <string name="screen_resolution_option_full" msgid="2694003735219114186">"Полна резолуција"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Полната резолуција троши повеќе батерија. Ако ја смените резолуцијата, некои апликации можеби ќе се рестартираат."</string>
@@ -2000,7 +2000,7 @@
     <string name="accessibility_hearingaid_instruction_continue_button" msgid="3367260988024430722">"Продолжи"</string>
     <string name="accessibility_hearingaid_title" msgid="1263619711863375614">"Слушни помагала"</string>
     <string name="accessibility_hearingaid_intro" msgid="5856992709195963850">"Со телефонот може да користите слушни помагала, кохлеарни импланти и други уреди за засилување на звукот"</string>
-    <string name="accessibility_hearingaid_not_connected_summary" msgid="7438018718889849521">"Не се поврзани слушни помагала"</string>
+    <string name="accessibility_hearingaid_not_connected_summary" msgid="7438018718889849521">"Не се поврзани слушни апарати"</string>
     <string name="accessibility_hearingaid_adding_summary" msgid="999051610528600783">"Додајте слушни помагала"</string>
     <string name="accessibility_hearingaid_pair_instructions_title" msgid="2357706801112207624">"Спарување слушни помагала"</string>
     <string name="accessibility_hearingaid_pair_instructions_message" msgid="581652489109350119">"На следниот екран, допрете ги слушните помагала. Можеби ќе треба да ги спарите левото и десното уво одделно.\n\nСлушните помагала треба да се вклучени и подготвени за спарување."</string>
@@ -2014,13 +2014,13 @@
     <string name="accessibility_hearing_device_connected_title" msgid="3785140037249487287">"Слушни помагала"</string>
     <string name="accessibility_hearing_device_saved_title" msgid="7573926212664909296">"Зачувани уреди"</string>
     <string name="accessibility_hearing_device_control" msgid="2661965917013100611">"Контроли за слушно помагало"</string>
-    <string name="accessibility_hearing_device_shortcut_title" msgid="7645100199603031360">"Кратенка за слушни помагала"</string>
+    <string name="accessibility_hearing_device_shortcut_title" msgid="7645100199603031360">"Кратенка за слушни апарати"</string>
     <string name="accessibility_hac_mode_title" msgid="2037950424429555652">"Компатибилност со слушни помагала"</string>
     <string name="accessibility_hac_mode_summary" msgid="5198760061256669067">"Ја подобрува компатибилноста со телекалемите и го намалува несаканиот шум"</string>
     <string name="accessibility_hearing_device_about_title" msgid="7883758309646288250">"За слушните помагала"</string>
     <string name="accessibility_hearing_device_footer_summary" msgid="7451899224828040581">"Погрижете се слушното помагало да биде вклучено и подготвено за спарување"</string>
     <string name="accessibility_hearing_device_pairing_page_title" msgid="6608901091770850295">"Спарете слушно помагало"</string>
-    <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"Достапни слушни помагала"</string>
+    <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"Достапни слушни апарати"</string>
     <string name="accessibility_found_all_devices" msgid="7817834722148556520">"Не го гледате вашето слушно помагало?"</string>
     <string name="accessibility_list_all_devices_title" msgid="161495343959211216">"Видете повеќе уреди"</string>
     <string name="accessibility_audio_adjustment_title" msgid="1332113739136802997">"Приспособување на аудиото"</string>
@@ -2833,7 +2833,7 @@
     <string name="sim_selection_channel_title" msgid="3193666315607572484">"Избор на SIM"</string>
     <string name="dashboard_title" msgid="5660733037244683387">"Поставки"</string>
     <string name="network_dashboard_title" msgid="788543070557731240">"Мрежа и интернет"</string>
-    <string name="network_dashboard_summary_mobile" msgid="7750924671970583670">"Мобилна, Wi‑Fi, точка на пристап"</string>
+    <string name="network_dashboard_summary_mobile" msgid="7750924671970583670">"Мобилна мрежа, Wi‑Fi, точка на пристап"</string>
     <string name="network_dashboard_summary_no_mobile" msgid="4022575916334910790">"Wi‑Fi, точка на пристап"</string>
     <string name="connected_devices_dashboard_title" msgid="19868275519754895">"Поврзани уреди"</string>
     <string name="connected_devices_dashboard_default_summary" msgid="7211769956193710397">"Bluetooth, спарување"</string>
