--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -616,7 +616,7 @@
     <string name="lockpassword_password_requires_nonletter" msgid="1185342065898300006">"{count,plural, =1{अनिवार्य रूपमा अक्षरबाहेकका कम्तीमा पनि १ वर्ण समावेश हुनु पर्छ}other{अनिवार्य रूपमा अक्षरबाहेकका कम्तीमा पनि # वर्ण समावेश हुनु पर्छ}}"</string>
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{अनिवार्य रूपमा अङ्कबाहेकका कम्तीमा पनि १ वर्ण समावेश हुनु पर्छ}other{अनिवार्य रूपमा अङ्कबाहेकका कम्तीमा पनि # वटा वर्ण समावेश हुनु पर्छ}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"डिभाइसको प्रशासकले पछिल्लो पासवर्ड प्रयोग गर्ने अनुमति दिँदैन"</string>
-    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"बढ्दो, घट्दो वा दोहोरिएका अङ्कहरूको अनुक्रमलाई निषेध गरिएको छ"</string>
+    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"बढ्दो, घट्दो क्रममा वा दोहोरिएका अङ्क हाल्न मिल्दैन"</string>
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"पुष्टि गर्नुहोस्"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"मेटाउनुहोस्"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"स्क्रिन लक पहिले नै परिवर्तन गरियो। नयाँ स्क्रिन लकमार्फत फेरि प्रयास गर्नुहोस्।"</string>
@@ -3329,7 +3329,7 @@
     <string name="notification_badge_title" msgid="6854537463548411313">"नयाँ सूचना आएको जनाउने थोप्लो देखाउन दिइयोस्"</string>
     <string name="notification_channel_badge_title" msgid="6505542437385640049">"सूचना जनाउने थोप्लो देखाउनुहोस्"</string>
     <string name="app_notification_override_dnd_title" msgid="3769539356442226691">"Do Not Disturb ओभरराइड गर्नुहोस्"</string>
-    <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"बाधा नपुर्‍याउनुहोस् नामक सुविधा अन भएका बेला पनि यी सूचना आइरहन दिइयोस्"</string>
+    <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"बाधा नपुर्‍याउनुहोस् नामक सुविधा अन भएका बेला पनि यी सूचना आइरहन दिनुहोस्"</string>
     <string name="app_notification_visibility_override_title" msgid="7778628150022065920">"लक स्क्रिन"</string>
     <string name="app_notifications_dialog_done" msgid="573716608705273004">"भयो"</string>
     <string name="notification_show_lights_title" msgid="5564315979007438583">"झिम झिम बत्ती बल्ने"</string>
@@ -3701,7 +3701,7 @@
     <string name="storage_summary" msgid="5903562203143572768">"<xliff:g id="PERCENTAGE">%1$s</xliff:g> प्रयोग भएको - खाली <xliff:g id="FREE_SPACE">%2$s</xliff:g>"</string>
     <string name="display_dashboard_summary" msgid="1599453894989339454">"अँध्यारो थिम, फन्टको आकार, चमक"</string>
     <string name="memory_summary" msgid="8221954450951651735">"<xliff:g id="TOTAL_MEMORY">%2$s</xliff:g> मध्ये औसत <xliff:g id="USED_MEMORY">%1$s</xliff:g> प्रयोग भएको छ"</string>
-    <string name="users_summary" msgid="8473589474976307510">"<xliff:g id="USER_NAME">%1$s</xliff:g> रूपमा साइन इन गरिएको छ"</string>
+    <string name="users_summary" msgid="8473589474976307510">"<xliff:g id="USER_NAME">%1$s</xliff:g> का रूपमा साइन इन गरिएको छ"</string>
     <string name="android_version_summary" msgid="7818952662015042768">"अपडेट गरी Android <xliff:g id="VERSION">%1$s</xliff:g> बनाइएको छ"</string>
     <string name="android_version_pending_update_summary" msgid="5404532347171027730">"अद्यावधिक उपलब्ध छ"</string>
     <string name="disabled_by_policy_title" msgid="6852347040813204503">"कार्यसम्बन्धी नीतिका आधारमा ब्लक गरिएको छ"</string>
