--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -1416,7 +1416,7 @@
     <string name="lockpassword_confirm_your_pattern_header" msgid="4037701363240138651">"Confirmă modelul"</string>
     <string name="lockpassword_confirm_your_work_pattern_header" msgid="2668883108969165844">"Introdu modelul pentru serviciu"</string>
     <string name="lockpassword_confirm_your_pin_header" msgid="2241722970567131308">"Reintrodu codul PIN"</string>
-    <string name="lockpassword_reenter_your_profile_pin_header" msgid="2890233614560435538">"Reintroduceți codul PIN de serviciu"</string>
+    <string name="lockpassword_reenter_your_profile_pin_header" msgid="2890233614560435538">"Reintrodu codul PIN de serviciu"</string>
     <string name="lockpassword_confirm_your_work_pin_header" msgid="4229765521391960255">"Introdu codul PIN pentru serviciu"</string>
     <string name="lockpassword_confirm_passwords_dont_match" msgid="2100071354970605232">"Parolele nu corespund"</string>
     <string name="lockpassword_confirm_pins_dont_match" msgid="1103699575489401030">"Codurile PIN nu corespund"</string>
@@ -3979,11 +3979,11 @@
     <string name="account_sync_summary_all_on" msgid="2953682111836599841">"Sincronizare activată pentru toate articolele"</string>
     <string name="account_sync_summary_all_off" msgid="6378301874540507884">"Sincronizare dezactivată pentru toate elementele"</string>
     <string name="enterprise_privacy_settings" msgid="786350385374794180">"Informații privind dispozitivul gestionat"</string>
-    <string name="enterprise_privacy_settings_summary_generic" msgid="5471858290610344646">"Modificări și setări gestionate de organizația dvs."</string>
+    <string name="enterprise_privacy_settings_summary_generic" msgid="5471858290610344646">"Modificări și setări gestionate de organizația ta"</string>
     <string name="enterprise_privacy_settings_summary_with_name" msgid="1315413275836515937">"Modificări și setări gestionate de <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>"</string>
     <string name="enterprise_privacy_header" msgid="4626225398848641603">"Pentru a oferi acces la datele tale de serviciu, organizația poate să modifice setările și să îți instaleze un software pe dispozitiv.\n\nPentru mai multe detalii, contactează administratorul organizației."</string>
     <string name="enterprise_privacy_exposure_category" msgid="2507761423540037308">"Tipuri de informații care pot fi văzute de organizația ta"</string>
-    <string name="enterprise_privacy_exposure_changes_category" msgid="5459989751333816587">"Modificări făcute de administratorul organizației dvs."</string>
+    <string name="enterprise_privacy_exposure_changes_category" msgid="5459989751333816587">"Modificări făcute de administratorul organizației tale"</string>
     <string name="enterprise_privacy_device_access_category" msgid="140157499478630004">"Accesul tău la acest dispozitiv"</string>
     <string name="enterprise_privacy_enterprise_data" msgid="3963070078195245028">"Date asociate contului dvs. de serviciu, cum ar fi e-mailul și calendarul"</string>
     <string name="enterprise_privacy_installed_packages" msgid="6707006112254572820">"Lista de aplicații de pe dispozitiv"</string>
@@ -4124,7 +4124,7 @@
     <string name="angle_enabled_app_set" msgid="7811829383833353021">"Aplicație compatibilă cu ANGLE: <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
     <string name="graphics_driver_dashboard_title" msgid="5661084817492587796">"Preferințe pentru driverul plăcii grafice"</string>
     <string name="graphics_driver_dashboard_summary" msgid="6348759885315793654">"Modifică setările driverului plăcii grafice"</string>
-    <string name="graphics_driver_footer_text" msgid="5123754522284046790">"Când sunt disponibile mai multe drivere ale plăcii grafice, puteți alege să folosiți driverul actualizat al plăcii grafice pentru aplicațiile instalate pe dispozitiv."</string>
+    <string name="graphics_driver_footer_text" msgid="5123754522284046790">"Când sunt disponibile mai multe drivere ale plăcii grafice, poți alege să folosești driverul actualizat al plăcii grafice pentru aplicațiile instalate pe dispozitiv."</string>
     <string name="graphics_driver_all_apps_preference_title" msgid="1343065382898127360">"Activează pentru toate aplicațiile"</string>
     <string name="graphics_driver_app_preference_title" msgid="3133255818657706857">"Selectează driverul plăcii grafice"</string>
     <string name="graphics_driver_app_preference_default" msgid="764432460281859855">"Prestabilit"</string>
