--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -616,7 +616,7 @@
     <string name="lockpassword_password_requires_nonletter" msgid="1185342065898300006">"{count,plural, =1{Phải có ít nhất 1 ký tự không phải chữ cái}other{Phải có ít nhất # ký tự không phải chữ cái}}"</string>
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{Phải có ít nhất 1 ký tự không phải chữ số}other{Phải có ít nhất # ký tự không phải chữ số}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"Quản trị viên thiết bị không cho phép sử dụng mật khẩu gần đây"</string>
-    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"Không cho phép thứ tự chữ số tăng dần, giảm dần hoặc lặp lại"</string>
+    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"Các chữ số không được có thứ tự tăng dần, giảm dần hoặc lặp lại"</string>
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"Xác nhận"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"Xóa"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"Phương thức khóa màn hình đã thay đổi. Hãy thử lại bằng phương thức khóa màn hình mới."</string>
@@ -966,7 +966,7 @@
     <string name="accessibility_work_account_title" msgid="7622485151217943839">"Tài khoản công việc - <xliff:g id="MANAGED_BY">%s</xliff:g>"</string>
     <string name="accessibility_personal_account_title" msgid="8535265881509557013">"Tài khoản cá nhân - <xliff:g id="MANAGED_BY">%s</xliff:g>"</string>
     <string name="search_settings" msgid="7573686516434589771">"Tìm kiếm"</string>
-    <string name="display_settings" msgid="7197750639709493852">"Màn hình"</string>
+    <string name="display_settings" msgid="7197750639709493852">"Hiển thị"</string>
     <string name="accelerometer_title" msgid="7745991950833748909">"Tự động xoay màn hình"</string>
     <string name="auto_rotate_option_off" msgid="2788096269396290731">"Đang tắt"</string>
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Đang bật"</string>
@@ -999,7 +999,7 @@
     <string name="adaptive_sleep_summary_no_permission" msgid="5822591289468803691">"Bạn cần cấp quyền truy cập vào máy ảnh để sử dụng tính năng phát hiện ánh mắt. Hãy nhấn vào quản lý quyền để sử dụng các tính năng Cá nhân hóa thiết bị"</string>
     <string name="adaptive_sleep_manage_permission_button" msgid="1404510197847664846">"Quản lý quyền"</string>
     <string name="adaptive_sleep_description" msgid="1835321775327187860">"Ngăn không cho màn hình tắt khi bạn đang nhìn vào đó"</string>
-    <string name="adaptive_sleep_privacy" msgid="7664570136417980556">"Tính năng phát hiện ánh mắt sử dụng máy ảnh trước để xem liệu có ai đang nhìn vào màn hình hay không. Tính năng này hoạt động trên thiết bị nên sẽ không bao giờ lưu trữ hoặc gửi hình ảnh cho Google."</string>
+    <string name="adaptive_sleep_privacy" msgid="7664570136417980556">"Tính năng phát hiện ánh mắt sử dụng camera trước để xem liệu có ai đang nhìn vào màn hình hay không. Tính năng này hoạt động trên thiết bị nên sẽ không bao giờ lưu trữ hoặc gửi hình ảnh cho Google."</string>
     <string name="adaptive_sleep_contextual_slice_title" msgid="7467588613212629758">"Bật tính năng phát hiện ánh mắt"</string>
     <string name="adaptive_sleep_contextual_slice_summary" msgid="2993867044745446094">"Giữ màn hình luôn bật khi bạn nhìn vào"</string>
     <string name="auto_rotate_camera_lock_title" msgid="5369003176695105872">"Máy ảnh bị khóa"</string>
@@ -1773,7 +1773,7 @@
     <string name="captions_category_title" msgid="574490148949400274">"Phụ đề"</string>
     <string name="audio_category_title" msgid="5283853679967605826">"Âm thanh"</string>
     <string name="general_category_title" msgid="6298579528716834157">"Chung"</string>
-    <string name="display_category_title" msgid="6638191682294461408">"Màn hình"</string>
+    <string name="display_category_title" msgid="6638191682294461408">"Hiển thị"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Màu sắc và chuyển động"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"Giảm bớt độ sáng màn hình"</string>
     <string name="interaction_control_category_title" msgid="2696474616743882372">"Điều khiển tương tác"</string>
@@ -2014,7 +2014,7 @@
     <string name="accessibility_hearing_device_connected_title" msgid="3785140037249487287">"Thiết bị trợ thính"</string>
     <string name="accessibility_hearing_device_saved_title" msgid="7573926212664909296">"Thiết bị đã lưu"</string>
     <string name="accessibility_hearing_device_control" msgid="2661965917013100611">"Chế độ điều khiển thiết bị trợ thính"</string>
-    <string name="accessibility_hearing_device_shortcut_title" msgid="7645100199603031360">"Phím tắt cho thiết bị trợ thính"</string>
+    <string name="accessibility_hearing_device_shortcut_title" msgid="7645100199603031360">"Lối tắt cho thiết bị trợ thính"</string>
     <string name="accessibility_hac_mode_title" msgid="2037950424429555652">"Khả năng tương thích với thiết bị trợ thính"</string>
     <string name="accessibility_hac_mode_summary" msgid="5198760061256669067">"Cải thiện khả năng tương thích với các cuộn dây cảm ứng và giảm tiếng ồn không mong muốn"</string>
     <string name="accessibility_hearing_device_about_title" msgid="7883758309646288250">"Giới thiệu về thiết bị nghe"</string>
@@ -3522,7 +3522,7 @@
     <string name="notifications_label" msgid="8471624476040164538">"Thông báo"</string>
     <string name="notifications_enabled" msgid="7743168481579361019">"Đang bật"</string>
     <string name="notifications_enabled_with_info" msgid="1808946629277684308">"<xliff:g id="NOTIFICATIONS_SENT">%1$s</xliff:g> / <xliff:g id="NOTIFICATIONS_CATEGORIES_OFF">%2$s</xliff:g>"</string>
-    <string name="notifications_disabled" msgid="5603160425378437143">"Tắt"</string>
+    <string name="notifications_disabled" msgid="5603160425378437143">"Đang tắt"</string>
     <string name="notifications_categories_off" msgid="7712037485557237328">"{count,plural, =1{Đã tắt # danh mục}other{Đã tắt # danh mục}}"</string>
     <string name="runtime_permissions_additional_count" msgid="6071909675951786523">"{count,plural, =1{# quyền bổ sung}other{# quyền bổ sung}}"</string>
     <string name="runtime_permissions_summary_no_permissions_granted" msgid="7456745929035665029">"Chưa được cấp quyền nào"</string>
